compose/envoy/envoy2.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: web_service
    connect_timeout: 1s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: httpbin.org
        port_value: 80
  - name: xds_cluster
    connect_timeout: 10s
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    # http_protocol_options: {}
    # This address needs to be updated with the address to reach the Flask app
    # Hint: With Docker bridge-mode networking with very default settings on
    # Linux, the address can be set to 172.17.0.1 to reach the host.
    hosts: [{ socket_address: { address: "172.17.0.1", port_value: 5000 }}]

dynamic_resources:
  # ads_config:
  #   api_type: GRPC
  #   transport_api_version: V3
  #   grpc_services:
  #   - envoy_grpc:
  #       cluster_name: xds_cluster
  #   set_node_on_first_message_only: true
  # cds_config:
  #   resource_api_version: V3
  #   ads: {}
  cds_config:
    resource_api_version: V3
    api_config_source:
      api_type: GRPC
      transport_api_version: V3
      grpc_services:
        - envoy_grpc:
            cluster_name: xds_cluster  # lds_config:
  #   resource_api_version: V3
  #   api_config_source:
  #     api_type: GRPC
  #     transport_api_version: V3
  #     grpc_services:
  #       - envoy_grpc:
  #           cluster_name: xds_cluster
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
